feat: sync renewal changes for ai, seller dashboard, checkout, deploy docs, and java21